--- a/style.css
+++ b/style.css
@@ -5,3 +5,15 @@ img {
 body {
   background-color: blue;
 }
+
+.my-img{
+    animation: rotateImg 2s linear infinite;
+  }
+  @keyframes rotateImg{
+    from {
+     transform: rotate(0deg);
+    }
+   to {
+    transform: rotate(359deg);
+   }
+  }
