--- a/style.css
+++ b/style.css
@@ -17,3 +17,15 @@ body {
     transform: rotate(359deg);
    }
   }
+
+.my-img2{
+    animation: rotateImg 2s linear infinite;
+  }
+  @keyframes rotateImg{
+    from {
+     transform: rotate(0deg);
+    }
+   to {
+    transform: rotate(-359deg);
+   }
+  }
